# aoc2022

./: .gitignore  README.md  aoc2022.cabal
Day01/: Day01.hs
Day02/: Day02.hs
Day03/: Day03.hs
Day04/: Day04.hs
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Template.hs
test/: Common.hs  Main.hs
test/Test/: Day06.hs  Day07.hs
